--- a/form/step1.html
+++ b/form/step1.html
@@ -110,8 +110,39 @@
                 <p>Casa</p>
               </div>
             </div>
+
+
+
+
           </div>
+
+          
         </div>
+
+
+        <style>
+  .frase p {
+    /* Color inicial */
+    /* Aplica la animación con ciclo de 2s (1s rojo, 1s blanco) */
+    animation: parpadeo-color 4s infinite;
+  }
+
+  @keyframes parpadeo-color {
+    0%, 100% {
+      color: rgb(90, 86, 86);
+    }
+    40% {
+      color: rgb(157, 6, 232);
+    }
+  }
+</style>
+
+<div class="frase">
+  <p>Mientras más precisa sea la información, mejor será el resultado que podremos entregarte.</p>
+</div>
+
+
+
       </div>
 
       <div data-layer="navigation" class="Navigation">
